--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Muhammad Aulia Rasyid Alzahrowi">
+    <meta name="keywords" content="Roshit, Rosyid, Muhammad Aulia Rasyid">
+    <meta name="description" content="Web Profiles Roshit">
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="src/css/app.css" />
     <!-- Font Awesome --->
