--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Roshit, Rosyid, Muhammad Aulia Rasyid">
     <meta name="description" content="Web Profiles Roshit">
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="src/css/app.css" />
+    <link rel="stylesheet" href="./src/css/app.css" />
     <!-- Font Awesome --->
     <script
       src="https://kit.fontawesome.com/024c1ae29f.js"
@@ -1333,7 +1333,7 @@
     </div>
     <!-- Modal Certificates LKS End -->
     <!-- Footer Section End -->
-    <script src="src/js/app.js"></script>
+    <script src="./src/js/app.js"></script>
     <script
       type="text/javascript"
       src="node_modules/tw-elements/dist/js/tw-elements.umd.min.js"
