done build with vite

--- a/index.html
+++ b/index.html
@@ -1333,9 +1333,9 @@
     </div>
     <!-- Modal Certificates LKS End -->
     <!-- Footer Section End -->
-    <script src="./src/js/app.js"></script>
+    <script type="module" src="./src/js/app.js"></script>
     <script
-      type="text/javascript"
+      type="module"
       src="node_modules/tw-elements/dist/js/tw-elements.umd.min.js"
     ></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
