fix text on about section

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
               Let's be friends!
             </h3>
             <p
-              class="mb-6 max-w-xl text-sm font-medium text-secondary lg:text-lg selection:text-white"
+              class="mb-6 max-w-xl text-base font-medium text-secondary lg:text-lg selection:text-white"
               data-aos="fade-up"
             >
               I would love to be friends with anyone, so click the button below
@@ -482,7 +482,7 @@
     <!-- Technology Section Start -->
     <section id="skill" class="pt-32 dark:bg-slate-800 bg-slate-100">
       <div class="container">
-        <div class="mx-auto text-center">
+        <div class="mx-auto text-center" data-aos="fade-up">
           <h4
             class="mb-2 text-lg font-semibold uppercase text-primary selection:text-white"
           >
