perf-compress assets

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="author" content="Muhammad Aulia Rasyid Alzahrowi">
     <meta name="keywords" content="Roshit, Rosyid, Muhammad Aulia Rasyid">
     <meta name="description" content="Web Profiles Roshit">
+    <meta http-equiv="refresh">
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./src/css/app.css" />
     <!-- Font Awesome --->
@@ -221,7 +222,7 @@
           <div class="mt-10 w-full self-end px-4 lg:w-1/2">
             <div class="relative flex justify-center">
               <img
-                src="src/assets/pp.png"
+                src="src/assets/pp.webp"
                 alt="Roshit"
                 class="relative z-[1] border-2 border-slate-500 w-52 max-w-full rounded-full shadow-xl lg:w-60 filter grayscale"
                 draggable="false"
@@ -752,11 +753,11 @@
               <div
                 class="overflow-hidden w-full rounded-md shadow-md justify-center bg-cover bg-center"
                 style="
-                  background-image: url('src/assets/projects/simak-cover.png');
+                  background-image: url('src/assets/projects/simak-cover.webp');
                 "
               >
                 <img
-                  src="src/assets/projects/simak-cover.png"
+                  src="src/assets/projects/simak-cover.webp"
                   alt="Sistem Manajemen Kuesioner (SIMAK)"
                   width="w-full"
                   class="transition duration-300 ease-in-out hover:scale-110"
@@ -825,11 +826,11 @@
             >
               <div
                 class="overflow-hidden w-full rounded-md shadow-md justify-center bg-cover bg-center"
-                style="background-image: url('src/assets/projects/2.png')"
+                style="background-image: url('src/assets/projects/2.webp')"
               >
                 <img
-                  src="src/assets/projects/2.png"
-                  alt="Sistem Manajemen Kuesioner (SIMAK)"
+                  src="src/assets/projects/2.webp"
+                  alt="Weather Forecast Realtime Project"
                   width="w-full"
                   class="transition duration-300 ease-in-out hover:scale-110"
                 />
@@ -882,10 +883,10 @@
             >
               <div
                 class="overflow-hidden w-full rounded-md shadow-md justify-center bg-cover bg-center"
-                style="background-image: url('src/assets/projects/3.png')"
+                style="background-image: url('src/assets/projects/3.webp')"
               >
                 <img
-                  src="src/assets/projects/3.png"
+                  src="src/assets/projects/3.webp"
                   alt="Rock Paper Scissors"
                   width="w-full"
                   class="transition duration-300 ease-in-out hover:scale-110"
@@ -939,10 +940,10 @@
             >
               <div
                 class="overflow-hidden w-full rounded-md shadow-md justify-center bg-cover bg-center"
-                style="background-image: url('src/assets/projects/4.png')"
+                style="background-image: url('src/assets/projects/4.webp')"
               >
                 <img
-                  src="src/assets/projects/4.png"
+                  src="src/assets/projects/4.webp"
                   alt="Currency Converter"
                   width="w-full"
                   class="transition duration-300 ease-in-out hover:scale-110"
@@ -1084,7 +1085,7 @@
                   data-te-carousel-active
                 >
                   <img
-                    src="src/assets/certificates/dasar-javascript.jpg"
+                    src="src/assets/certificates/dasar-javascript.webp"
                     class="block w-full"
                     alt="Dasar Dasar Javascript Dicoding"
                   />
@@ -1094,7 +1095,7 @@
                   data-te-carousel-item
                 >
                   <img
-                    src="src/assets/certificates/dasar-backend-nodejs.jpg"
+                    src="src/assets/certificates/dasar-backend-nodejs.webp"
                     class="block w-full"
                     alt="Dasar Dasar Membuat Aplikasi Backend Menggunakan Node.js"
                   />
@@ -1104,7 +1105,7 @@
                   data-te-carousel-item
                 >
                   <img
-                    src="src/assets/certificates/dasar-devops.jpg"
+                    src="src/assets/certificates/dasar-devops.webp"
                     class="block w-full"
                     alt="Dasar Dasar DevOps Dicoding"
                   />
@@ -1114,7 +1115,7 @@
                   data-te-carousel-item
                 >
                   <img
-                    src="src/assets/certificates/dasar-aws.jpg"
+                    src="src/assets/certificates/dasar-aws.webp"
                     class="block w-full"
                     alt="Dasar Dasar Amazon Web Services Dicoding"
                   />
@@ -1124,7 +1125,7 @@
                   data-te-carousel-item
                 >
                   <img
-                    src="src/assets/certificates/fundamental-backend.jpeg"
+                    src="src/assets/certificates/fundamental-backend.webp"
                     class="block w-full"
                     alt="Belajar Fundamental Aplikasi Back End"
                   />
@@ -1134,7 +1135,7 @@
                   data-te-carousel-item
                 >
                   <img
-                    src="src/assets/certificates/php-sololearn.jpg"
+                    src="src/assets/certificates/php-sololearn.webp"
                     class="block w-full"
                     alt="PHP Sololearn"
                   />
@@ -1214,7 +1215,7 @@
             data-aos="fade-up"
           >
             <img
-              src="src/assets/certificates/Sertifikat LKS 2023_1.jpg"
+              src="src/assets/certificates/Sertifikat LKS 2023_1.webp"
               class="w-auto lg:max-w-xs rounded-lg"
               alt="Sertifikat Juara 2 LKS"
             />
@@ -1262,11 +1263,8 @@
               data-type="email"
               id="interactable"
             >
-              <span class="mr-3 text-4xl text-dark dark:text-white">
-                <i class="fa-solid fa-envelope"></i>
-              </span>
               <span
-                class="text-xl lg:text-4xl text-dark dark:text-white font-semibold text-center bg-gradient-to-r from-dark to-dark dark:from-white dark:to-white bg-[length:0%_4px] bg-left-bottom bg-no-repeat transition-all duration-700 ease-out group-hover:bg-[length:100%_4px]"
+                class="text-xl lg:text-4xl text-dark dark:text-white font-semibold text-center bg-gradient-to-r from-dark to-dark dark:from-white dark:to-white bg-[length:0%_3px] bg-left-bottom bg-no-repeat transition-all duration-700 ease-out group-hover:bg-[length:100%_3px]"
               >
                 auliarasyidalzahrawi<span class="text-primary">@gmail</span>.com
               </span>
@@ -1321,7 +1319,7 @@
           <!--Modal body-->
           <div class="relative p-4">
             <img
-              src="src/assets/certificates/Sertifikat LKS 2023_1.jpg"
+              src="src/assets/certificates/Sertifikat LKS 2023_1.webp"
               class="w-full rounded-lg"
               alt="Sertifikat Juara 2 LKS"
             />
