fix some incorrect grammar

--- a/index.html
+++ b/index.html
@@ -199,18 +199,18 @@
     <section id="home" class="pt-36 dark:bg-dark">
       <div class="container">
         <div class="flex flex-wrap">
-          <div class="w-full self-center px-4 lg:w-1/2">
+          <div class="w-full self-center px-4 lg:w-1/2">'
             <h1
               class="text-base font-semibold text-primary md:text-xl selection:text-white animate-fade-in"
             >
               hi everyone! 👋
             </h1>
             <h5
-              class="poppins mt-1 mb-10 block text-5xl font-bold text-dark lg:text-6xl dark:text-white subpixel-antialiased animate-fade-in"
+              class="poppins mt-1 mb-10 block text-5xl font-medium text-dark lg:text-6xl dark:text-white subpixel-antialiased animate-fade-in"
             >
-              I'm Roshit<span class="text-primary">.</span>
+              i'm <span class="font-bold">roshit</span><span class="text-primary">.</span>
             </h5>
-
+            
             <a
               href="#about"
               class="rounded-full bg-primary px-5 py-4 text-base font-semibold text-white transition duration-300 ease-in-out hover:opacity-80 hover:shadow-lg"
@@ -222,13 +222,12 @@
           <div class="mt-10 w-full self-end px-4 lg:w-1/2">
             <div class="relative flex justify-center">
               <img
-                src="src/assets/pp.webp"
+                src="src/assets/pp.webp" fetchpriority="high"
                 alt="Roshit"
                 class="relative z-[1] border-2 border-slate-500 w-52 max-w-full rounded-full shadow-xl lg:w-60 filter grayscale"
                 draggable="false"
                 data-aos="fade-left"
               />
-
               <!-- Animated Blob Start --->
               <span
                 class="absolute -top-12 right-5 md:right-1 md:scale-125 filter blur-md opacity-70"
@@ -305,13 +304,13 @@
               class="mb-5 max-w-md text-3xl font-bold text-dark lg:text-4xl dark:text-white"
               data-aos="fade-right"
             >
-              Introduce me
+              Introduce myself
             </h2>
             <article data-aos="fade-right" class="selection:text-white">
               <p
                 class="max-w-xl text-base font-medium text-secondary lg:text-lg subpixel-antialiased text-justify mb-3"
               >
-                My name is Muhammad Aulia Rasyid Alzahrowi, but I prefer to go
+                Hi, I'm Muhammad Aulia Rasyid Alzahrowi, but I prefer to go
                 by Roshit.
               </p>
 
@@ -1095,7 +1094,7 @@
                   data-te-carousel-item
                 >
                   <img
-                    src="src/assets/certificates/dasar-backend-nodejs.webp"
+                    src="src/assets/certificates/dasar-backend-nodejs.webp" fetchpriority="low"
                     class="block w-full"
                     alt="Dasar Dasar Membuat Aplikasi Backend Menggunakan Node.js"
                   />
@@ -1105,7 +1104,7 @@
                   data-te-carousel-item
                 >
                   <img
-                    src="src/assets/certificates/dasar-devops.webp"
+                    src="src/assets/certificates/dasar-devops.webp" fetchpriority="low"
                     class="block w-full"
                     alt="Dasar Dasar DevOps Dicoding"
                   />
@@ -1115,7 +1114,7 @@
                   data-te-carousel-item
                 >
                   <img
-                    src="src/assets/certificates/dasar-aws.webp"
+                    src="src/assets/certificates/dasar-aws.webp" fetchpriority="low"
                     class="block w-full"
                     alt="Dasar Dasar Amazon Web Services Dicoding"
                   />
@@ -1125,7 +1124,7 @@
                   data-te-carousel-item
                 >
                   <img
-                    src="src/assets/certificates/fundamental-backend.webp"
+                    src="src/assets/certificates/fundamental-backend.webp" fetchpriority="low"
                     class="block w-full"
                     alt="Belajar Fundamental Aplikasi Back End"
                   />
@@ -1135,7 +1134,7 @@
                   data-te-carousel-item
                 >
                   <img
-                    src="src/assets/certificates/php-sololearn.webp"
+                    src="src/assets/certificates/php-sololearn.webp" fetchpriority="low"
                     class="block w-full"
                     alt="PHP Sololearn"
                   />
