--- a/index.html
+++ b/index.html
@@ -206,9 +206,9 @@
               hi everyone! 👋
             </h1>
             <h5
-              class="poppins mt-1 mb-10 block text-5xl font-medium text-dark lg:text-6xl dark:text-white subpixel-antialiased animate-fade-in"
+              class="poppins mt-1 mb-10 block text-5xl font-bold text-dark lg:text-6xl dark:text-white subpixel-antialiased animate-fade-in"
             >
-              i'm <span class="font-bold">roshit</span><span class="text-primary">.</span>
+              I'm Roshit<span class="text-primary">.</span>
             </h5>
             
             <a
