--- a/index.html
+++ b/index.html
@@ -208,7 +208,6 @@
             <h5
               class="poppins mt-1 mb-10 block text-5xl font-bold text-dark lg:text-6xl dark:text-white subpixel-antialiased animate-fade-in"
             >
-              I'm Roshit<span class="text-primary">.</span>
             </h5>
             
             <a
@@ -310,8 +309,7 @@
               <p
                 class="max-w-xl text-base font-medium text-secondary lg:text-lg subpixel-antialiased text-justify mb-3"
               >
-                Hi, I'm Muhammad Aulia Rasyid Alzahrowi, but I prefer to go
-                by Roshit.
+                Hi, I'm Muhammad Aulia Rasyid Alzahrowi, also known as Roshit.
               </p>
 
               <p
