--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
     <section id="home" class="pt-36 dark:bg-dark">
       <div class="container">
         <div class="flex flex-wrap">
-          <div class="w-full self-center px-4 lg:w-1/2">'
+          <div class="w-full self-center px-4 lg:w-1/2">
             <h1
               class="text-base font-semibold text-primary md:text-xl selection:text-white animate-fade-in"
             >
