--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Muhammad Aulia Rasyid Alzahrowi">
-    <meta name="keywords" content="Roshit, Rosyid, Muhammad Aulia Rasyid">
-    <meta name="description" content="Web Profiles Roshit">
-    <meta http-equiv="refresh">
+    <meta name="author" content="Muhammad Aulia Rasyid Alzahrowi" />
+    <meta name="keywords" content="Roshit, Rosyid, Muhammad Aulia Rasyid" />
+    <meta name="description" content="Web Profiles Roshit" />
+    <meta http-equiv="refresh" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./src/css/app.css" />
     <!-- Font Awesome --->
@@ -68,7 +68,7 @@
 
     <!-- Trailer Start --->
     <div id="trailer" class="trailer invisible lg:visible">
-      <i  
+      <i
         id="trailer-icon"
         class="fa-solid fa-arrow-down"
         style="color: #fff"
@@ -208,9 +208,9 @@
             <h5
               class="poppins mt-1 mb-10 block text-5xl font-bold text-dark lg:text-6xl dark:text-white subpixel-antialiased animate-fade-in"
             >
-            I'm Roshit
+              I'm Roshit
             </h5>
-            
+
             <a
               href="#about"
               class="rounded-full bg-primary px-5 py-4 text-base font-semibold text-white transition duration-300 ease-in-out hover:opacity-80 hover:shadow-lg"
@@ -222,7 +222,8 @@
           <div class="mt-10 w-full self-end px-4 lg:w-1/2">
             <div class="relative flex justify-center">
               <img
-                src="src/assets/pp.webp" fetchpriority="high"
+                src="src/assets/pp.webp"
+                fetchpriority="high"
                 alt="Roshit"
                 class="relative z-[1] border-2 border-slate-500 w-52 max-w-full rounded-full shadow-xl lg:w-60 filter grayscale"
                 draggable="false"
@@ -1093,7 +1094,8 @@
                   data-te-carousel-item
                 >
                   <img
-                    src="src/assets/certificates/dasar-backend-nodejs.webp" fetchpriority="low"
+                    src="src/assets/certificates/dasar-backend-nodejs.webp"
+                    fetchpriority="low"
                     class="block w-full"
                     alt="Dasar Dasar Membuat Aplikasi Backend Menggunakan Node.js"
                   />
@@ -1103,7 +1105,8 @@
                   data-te-carousel-item
                 >
                   <img
-                    src="src/assets/certificates/dasar-devops.webp" fetchpriority="low"
+                    src="src/assets/certificates/dasar-devops.webp"
+                    fetchpriority="low"
                     class="block w-full"
                     alt="Dasar Dasar DevOps Dicoding"
                   />
@@ -1113,7 +1116,8 @@
                   data-te-carousel-item
                 >
                   <img
-                    src="src/assets/certificates/dasar-aws.webp" fetchpriority="low"
+                    src="src/assets/certificates/dasar-aws.webp"
+                    fetchpriority="low"
                     class="block w-full"
                     alt="Dasar Dasar Amazon Web Services Dicoding"
                   />
@@ -1123,7 +1127,8 @@
                   data-te-carousel-item
                 >
                   <img
-                    src="src/assets/certificates/fundamental-backend.webp" fetchpriority="low"
+                    src="src/assets/certificates/fundamental-backend.webp"
+                    fetchpriority="low"
                     class="block w-full"
                     alt="Belajar Fundamental Aplikasi Back End"
                   />
@@ -1133,7 +1138,8 @@
                   data-te-carousel-item
                 >
                   <img
-                    src="src/assets/certificates/php-sololearn.webp" fetchpriority="low"
+                    src="src/assets/certificates/php-sololearn.webp"
+                    fetchpriority="low"
                     class="block w-full"
                     alt="PHP Sololearn"
                   />
