--- a/index.html
+++ b/index.html
@@ -2,11 +2,16 @@
 <html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
+    <meta name="title" content="roshit">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Muhammad Aulia Rasyid Alzahrowi" />
-    <meta name="keywords" content="Roshit, Rosyid, Muhammad Aulia Rasyid" />
+    <meta name="keywords" content="Roshit, Rosyid, Muhammad Aulia Rasyid, roshit, roshit web, roshit web profile, rosyid web, rosid web, rasyid" />
     <meta name="description" content="Web Profiles Roshit" />
+    <meta name="theme-color" content="#8b5cf6"/>
+    <meta name="language" content="English">
+    <meta name="robots" content="index, follow">
     <meta http-equiv="refresh" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./src/css/app.css" />
     <!-- Font Awesome --->
