--- a/index.html
+++ b/index.html
@@ -2,31 +2,38 @@
 <html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
-    <meta name="title" content="roshit">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="title" content="roshit" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, user-scalable=no"
+    />
     <meta name="author" content="Muhammad Aulia Rasyid Alzahrowi" />
-    <meta name="keywords" content="Roshit, Rosyid, Muhammad Aulia Rasyid, roshit, roshit web, roshit web profile, rosyid web, rosid web, rasyid" />
-    <meta name="description" content="Web Profiles Roshit" />
-    <meta name="theme-color" content="#8b5cf6"/>
-    <meta name="language" content="English">
-    <meta name="robots" content="index, follow">
-    <meta http-equiv="refresh" />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta
+      name="keywords"
+      content="Roshit, Rosyid, Muhammad Aulia Rasyid, roshit, roshit web, roshit web profile, rosyid web, rosid web, rasyid"
+    />
+    <meta name="description" content="Welcome to my site! Regards Roshit" />
+    <meta name="theme-color" content="#8b5cf6" />
+    <meta name="language" content="English" />
+    <meta name="robots" content="index, follow" />
+    <meta http-equiv="refresh" content="30" />
+    <meta http-equiv="Content-Type" content="text/html" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="./src/css/app.css" />
+    <link rel="stylesheet" href="./src/css/app.css" as="style" />
     <!-- Font Awesome --->
-    <script
-      src="https://kit.fontawesome.com/024c1ae29f.js"
-      crossorigin="anonymous"
-    ></script>
-    <script src="https://cdn.jsdelivr.net/npm/kute.js@2.2.4/dist/kute.min.js"></script>
-
-    <!-- Font Poppins --->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap"
-      rel="stylesheet"
+      rel="preload"
+      href="/src/fonts/lato-bold-webfont.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    />
+    <link
+      rel="preload"
+      href="/src/fonts/poppins-regular-webfont.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin
     />
     <!-- Font Inter --->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -35,27 +42,9 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <!-- Font Lato for Logo --->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap"
-      rel="stylesheet"
-    />
 
     <link rel="icon" type="image/x-icon" href="src/assets/icon.ico" />
     <title>roshit</title>
-    <script>
-      if (
-        localStorage.theme === 'dark' ||
-        (!('theme' in localStorage) &&
-          window.matchMedia('(prefers-color-scheme: dark)').matches)
-      ) {
-        document.documentElement.classList.add('dark');
-      } else {
-        document.documentElement.classList.remove('dark');
-      }
-    </script>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
 
@@ -103,7 +92,7 @@
             <a
               href="#home"
               class="block py-6 text-lg lg:text-2xl font-bold text-primary"
-              style="font-family: 'Lato', sans-serif"
+              style="font-family: 'latobold', sans-serif"
               >roshit<span class="text-dark dark:text-white">.</span></a
             >
           </div>
@@ -211,7 +200,8 @@
               hi everyone! 👋
             </h1>
             <h5
-              class="poppins mt-1 mb-10 block text-5xl font-bold text-dark lg:text-6xl dark:text-white subpixel-antialiased animate-fade-in"
+              class="mt-1 mb-10 block text-5xl font-bold text-dark lg:text-6xl dark:text-white subpixel-antialiased animate-fade-in"
+              style="font-family: 'poppins', sans-serif"
             >
               I'm Roshit
             </h5>
@@ -1340,13 +1330,38 @@
     </div>
     <!-- Modal Certificates LKS End -->
     <!-- Footer Section End -->
-    <script type="module" src="./src/js/app.js"></script>
     <script
+      src="https://kit.fontawesome.com/024c1ae29f.js"
+      crossorigin="anonymous"
+      defer async
+    ></script>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/kute.js@2.2.4/dist/kute.min.js"
+      defer async
+    ></script>
+
+    <script defer async>
+      if (
+        localStorage.theme === 'dark' ||
+        (!('theme' in localStorage) &&
+          window.matchMedia('(prefers-color-scheme: dark)').matches)
+      ) {
+        document.documentElement.classList.add('dark');
+      } else {
+        document.documentElement.classList.remove('dark');
+      }
+    </script>
+
+    <script type="module" src="./src/js/app.js" async></script>
+
+    <script defer async
       type="module"
       src="node_modules/tw-elements/dist/js/tw-elements.umd.min.js"
     ></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script>
+
+    <script async>
       AOS.init();
     </script>
   </body>
