perf: add fetchpriority to img

--- a/index.html
+++ b/index.html
@@ -755,6 +755,7 @@
                   alt="Sistem Manajemen Kuesioner (SIMAK)"
                   width="w-full"
                   class="transition duration-300 ease-in-out hover:scale-110"
+                  fetchpriority="low"
                 />
               </div>
               <h3 class="mt-5 text-xl font-semibold text-dark dark:text-white">
@@ -827,6 +828,7 @@
                   alt="Weather Forecast Realtime Project"
                   width="w-full"
                   class="transition duration-300 ease-in-out hover:scale-110"
+                  fetchpriority="low"
                 />
               </div>
               <h3 class="mt-5 text-xl font-semibold text-dark dark:text-white">
@@ -884,6 +886,7 @@
                   alt="Rock Paper Scissors"
                   width="w-full"
                   class="transition duration-300 ease-in-out hover:scale-110"
+                  fetchpriority="low"
                 />
               </div>
               <h3 class="mt-5 text-xl font-semibold text-dark dark:text-white">
@@ -941,6 +944,7 @@
                   alt="Currency Converter"
                   width="w-full"
                   class="transition duration-300 ease-in-out hover:scale-110"
+                  fetchpriority="low"
                 />
               </div>
               <h3 class="mt-5 text-xl font-semibold text-dark dark:text-white">
@@ -1082,6 +1086,7 @@
                     src="src/assets/certificates/dasar-javascript.webp"
                     class="block w-full"
                     alt="Dasar Dasar Javascript Dicoding"
+                    fetchpriority="low"
                   />
                 </div>
                 <div
@@ -1217,6 +1222,7 @@
               src="src/assets/certificates/Sertifikat LKS 2023_1.webp"
               class="w-auto lg:max-w-xs rounded-lg"
               alt="Sertifikat Juara 2 LKS"
+              fetchpriority="low"
             />
             <h3
               class="font-semibold text-center mt-3 text-white dark:text-dark"
