--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <meta name="robots" content="index, follow" />
     <meta http-equiv="Content-Type" content="text/html" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="manifest" href="manifest.json" />
     <link rel="stylesheet" href="./src/css/app.css" as="style" />
     <!-- Font Awesome --->
     <link
