perf: manifest fix, defer & async

--- a/index.html
+++ b/index.html
@@ -1321,17 +1321,16 @@
     <script
       src="https://kit.fontawesome.com/024c1ae29f.js"
       crossorigin="anonymous"
-      defer
       async
     ></script>
 
     <script
       src="https://cdn.jsdelivr.net/npm/kute.js@2.2.4/dist/kute.min.js"
-      defer
+      
       async
     ></script>
 
-    <script defer async>
+    <script async>
       const tween = KUTE.fromTo(
         '#blob1',
         {
@@ -1349,7 +1348,7 @@
       tween.start();
     </script>
 
-    <script defer async>
+    <script async>
       if (
         localStorage.theme === 'dark' ||
         (!('theme' in localStorage) &&
@@ -1365,7 +1364,6 @@
 
     <script
       defer
-      async
       type="module"
       src="node_modules/tw-elements/dist/js/tw-elements.umd.min.js"
     ></script>
