perf: inter font covert to woff2 format

--- a/index.html
+++ b/index.html
@@ -35,13 +35,14 @@
       type="font/woff2"
       crossorigin
     />
-    <!-- Font Inter --->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@400;500;700&display=swap"
-      rel="stylesheet"
+      rel="preload"
+      href="/src/fonts/inter-regular-webfont.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin
     />
+
 
     <link rel="icon" type="image/x-icon" href="src/assets/icon.ico" />
     <title>roshit</title>
@@ -457,7 +458,7 @@
     <!-- About Section End -->
 
     <!-- Technology Section Start -->
-    <section id="skill" class="pt-32 dark:bg-slate-800 bg-slate-100">
+    <section id="skill" class="pt-32 pb-24 dark:bg-slate-800 bg-slate-100">
       <div class="container">
         <div class="mx-auto text-center" data-aos="fade-up">
           <h4
