feat(hero): add typing effects

--- a/index.html
+++ b/index.html
@@ -201,11 +201,20 @@
               hi everyone! 👋
             </h1>
             <h5
-              class="mt-1 mb-10 block text-5xl font-bold text-dark lg:text-6xl dark:text-white subpixel-antialiased animate-fade-in"
+              class="mt-1 mb-1 block text-5xl font-bold text-dark lg:text-6xl dark:text-white subpixel-antialiased animate-fade-in"
               style="font-family: 'poppins', sans-serif"
             >
               I'm Roshit
             </h5>
+            <div class="mb-10">
+              <div id="typed-strings">
+                <p>A Student.</p>
+                <p>Web Developer Enthusiast.</p>
+                <p>Cinephile.</p>
+                <p><q>Maximum Effort</q></p>
+              </div>
+              <span id="typed" class="text-dark dark:text-white text-lg"></span>
+            </div>
 
             <a
               href="#about"
