fix(copyright): dynamic year

--- a/index.html
+++ b/index.html
@@ -1276,24 +1276,19 @@
     <footer class="bg-dark py-3">
       <div class="container">
         <div class="w-full">
-          <p
-            class="text-center text-sm font-medium text-slate-400 selection:text-white"
-          >
-            Copyright &copy; 2024
-            <a
-              class="group font-bold text-primary transition-all duration-300 ease-in-out"
-              href="https://linktr.ee/roshit"
-            >
-              <span
-                class="bg-gradient-to-r from-primary to-primary bg-[length:0%_2px] bg-left-bottom bg-no-repeat transition-all duration-500 ease-out group-hover:bg-[length:100%_2px]"
-              >
-                Roshit
-              </span>
-            </a>
+          <p class="text-center text-sm font-medium text-slate-400 selection:text-white" id="copyright">
+            <span id="copyright-text">Copyright &copy; 2023</span>
+            <span id="link-roshit">
+              <a class="group font-bold text-primary transition-all duration-300 ease-in-out" href="https://linktr.ee/roshit">
+                <span class="bg-gradient-to-r from-primary to-primary bg-[length:0%_2px] bg-left-bottom bg-no-repeat transition-all duration-500 ease-out group-hover:bg-[length:100%_2px]">
+                  Roshit
+                </span>
+              </a>
+            </span>
           </p>
         </div>
       </div>
-    </footer>
+    </footer>    
 
     <!-- Modal Certificates LKS -->
     <!--Verically centered modal-->
